2014-06-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (incremental_search): Call get_input_key instead of
	info_get_input_byte.

	* info/session.c (fill_input_buffer): New function to call
	info_gather_typeahead.  Try to read input again if interrupted by
	a signal, as was done in info_get_input_byte.
	(info_gather_typeahead): Return code says if there was a read error.
	(info_any_buffered_input_p, get_input_key, info_search_internal): Call
	fill_input_buffer instead.
	(info_get_input_byte): Removed.

	(info_gather_typeahead): [--dribble] Call dribble to save input bytes.
	(get_input_key): [--dribble] Don't call dribble.

2014-06-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_get_another_input_byte): Removed.
	* info/echo-area.c (ea_quoted_insert): Call get_another_input_key
	instead.

2014-06-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_set_pending_input): Function removed.
	(info_gather_typeahead): Don't call info_set_pending_input.

	* info/session.c (info_numeric_arg_digit_loop): Call
	get_another_input_key instead of info_get_another_input_byte.
	* info/session.h (DECLARE_INFO_COMMAND): Pass key argument as int
	rather than unsigned char.  All declarations updated.
	* info/makedoc.c (process_one_file): Change function declarations
	output in funs.h.

2014-06-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.h (ISMETA, META, UNMETA, ISCONTROL, INFOKEY_RADIX)
	(INFOKEY_MAX_SECTIONLEN): Removed.
	* info/infokey.h, info/infomap.h (INFOKEY_FILE, A_MAX_COMMAND)
	(A_INVALID, CONTROL): Remaining definitions moved between files.
	infokey.h merged into infomap.h.

	* info/infomap.c (keymap_discard_keymap, find_function_keyseq)
	(remove_function_keyseq): Remove unused.

	(default_emacs_like_info_keys, default_emacs_like_ea_keys)
	(default_vi_like_info_keys, default_vi_like_ea_keys)
	(section_to_keymaps): Remove flag saying whether to suppress
	default keybindings.
